--- a/src/sass/_sprites.scss
+++ b/src/sass/_sprites.scss
@@ -11,55 +11,33 @@ $icon-home: x y offset_x offset_y width height total_width total_height image_pa
 At the bottom of this section, we provide information about the spritesheet itself
 $spritesheet: width height image $spritesheet-sprites;
 */
-$fb-name: 'fb';
-$fb-x: 144px;
-$fb-y: 0px;
-$fb-offset-x: -144px;
-$fb-offset-y: 0px;
-$fb-width: 50px;
-$fb-height: 40px;
-$fb-total-width: 194px;
-$fb-total-height: 144px;
-$fb-image: '../images/sprite.png';
-$fb: (144px, 0px, -144px, 0px, 50px, 40px, 194px, 144px, '../images/sprite.png', 'fb', );
-$odn-name: 'odn';
-$odn-x: 144px;
-$odn-y: 40px;
-$odn-offset-x: -144px;
-$odn-offset-y: -40px;
-$odn-width: 50px;
-$odn-height: 40px;
-$odn-total-width: 194px;
-$odn-total-height: 144px;
-$odn-image: '../images/sprite.png';
-$odn: (144px, 40px, -144px, -40px, 50px, 40px, 194px, 144px, '../images/sprite.png', 'odn', );
-$touch-name: 'touch';
-$touch-x: 0px;
-$touch-y: 0px;
-$touch-offset-x: 0px;
-$touch-offset-y: 0px;
-$touch-width: 144px;
-$touch-height: 144px;
-$touch-total-width: 194px;
-$touch-total-height: 144px;
-$touch-image: '../images/sprite.png';
-$touch: (0px, 0px, 0px, 0px, 144px, 144px, 194px, 144px, '../images/sprite.png', 'touch', );
-$tw-name: 'tw';
-$tw-x: 144px;
-$tw-y: 80px;
-$tw-offset-x: -144px;
-$tw-offset-y: -80px;
-$tw-width: 50px;
-$tw-height: 40px;
-$tw-total-width: 194px;
-$tw-total-height: 144px;
-$tw-image: '../images/sprite.png';
-$tw: (144px, 80px, -144px, -80px, 50px, 40px, 194px, 144px, '../images/sprite.png', 'tw', );
-$spritesheet-width: 194px;
-$spritesheet-height: 144px;
+$icon-6-name: 'icon-6';
+$icon-6-x: 0px;
+$icon-6-y: 0px;
+$icon-6-offset-x: 0px;
+$icon-6-offset-y: 0px;
+$icon-6-width: 46px;
+$icon-6-height: 46px;
+$icon-6-total-width: 88px;
+$icon-6-total-height: 46px;
+$icon-6-image: '../images/sprite.png';
+$icon-6: (0px, 0px, 0px, 0px, 46px, 46px, 88px, 46px, '../images/sprite.png', 'icon-6', );
+$icon-7-name: 'icon-7';
+$icon-7-x: 46px;
+$icon-7-y: 0px;
+$icon-7-offset-x: -46px;
+$icon-7-offset-y: 0px;
+$icon-7-width: 42px;
+$icon-7-height: 43px;
+$icon-7-total-width: 88px;
+$icon-7-total-height: 46px;
+$icon-7-image: '../images/sprite.png';
+$icon-7: (46px, 0px, -46px, 0px, 42px, 43px, 88px, 46px, '../images/sprite.png', 'icon-7', );
+$spritesheet-width: 88px;
+$spritesheet-height: 46px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($fb, $odn, $touch, $tw, );
-$spritesheet: (194px, 144px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($icon-6, $icon-7, );
+$spritesheet: (88px, 46px, '../images/sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
