--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,3 +1,3 @@
 <header class="header">
-	<h1 style="text-align: center;">Just The Simple Gulp Starter!!!!!!</h1>
+	<h1 style="text-align: center;">Just The Simple Gulp Starter!</h1>
 </header>
